fix: Don't set overflow: hidden on the body
Why on earth did I do this? 🤦

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,3 @@
-body {
-    overflow: hidden;
-}
-
 .col-scrollable {
     position: absolute;
     overflow-y: scroll;
